k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-huxo-app-service
spec:
  type: ClusterIP
  selector:
    app: enterprise-huxo-app
  ports:
  - port: 80
    targetPort: 80
